--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,17 @@ body::before {
     z-index: 1;
 }
 
+#bg-canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    pointer-events: none;
+    opacity: 0.6;
+}
+
 main {
     position: relative;
     z-index: 2;
